@@ -28,9 +28,9 @@ create a general purpose MPEG video/audio player for the Linux OS.
 %build
 # Needed for snapshot releases.
 if [ ! -f configure ]; then
-  CFLAGS="$RPM_OPT_FLAGS" ./autogen.sh --prefix=%prefix --disable-gtk-player --disable-opengl-player
+  CFLAGS="$RPM_OPT_FLAGS" ./autogen.sh --prefix=%prefix --disable-opengl-player
 else
-  CFLAGS="$RPM_OPT_FLAGS" ./configure --prefix=%prefix --disable-gtk-player --disable-opengl-player
+  CFLAGS="$RPM_OPT_FLAGS" ./configure --prefix=%prefix --disable-opengl-player
 fi
 
 if [ "$SMP" != "" ]; then
